# bazel-external-toolchain-rules

./: README.md  WORKSPACE
.github/workflows/: main.yaml
.repository/: license.spdx
bazel/macros/: BUILD.bazel  helm.bzl  helm_repository.bat.tpl  helm_repository.sh.tpl  http_toolchain.bzl  load_all.bzl  toolchains.bzl
bazel/toolchains/: helm.toolchain  yq.toolchain
